# redis-clinterwebz

./: .dockerignore  .gitignore  .interwebz-aws-cred  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  sample_settings.json  setup.cfg
docker/flask/: Dockerfile  settings.json
docker/nginx/: Dockerfile  proxy.conf
docker/redis/: Dockerfile  interwebz.aclfile  redis.conf
docker/redis-stack/: Dockerfile  interwebz.aclfile  redis.conf
interwebz/: __init__.py  api.py  default_settings.py  pagesession.py  redis.py
interwebz/static/css/: cli.css
interwebz/static/js/: cli.js
interwebz/templates/: home.html
kube/: config-map.yaml  deployment.yaml  ingress.yaml  service.yaml
redis/: interwebsz.acl.source  interwebz.acl.source  interwebz.aclfile  interwebz.commands-allowed  introspect.acl  redis.conf
terraform/: ec2.tf  ecr.tf  keys.tf  provider.tf  public.key  security.tf  vars.tf  vpc.tf
tests/: conftest.py  test_factory.py
