[metadata]
name = interwebz
version = 0.0.1

[options]
packages = interwebz
install_requires =
    flask
    flask-cors
    redis

[build-system]
requires = 
  setuptools >= 40.9.0
  wheel

build-backend = setuptools.build_meta

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    interwebz