[metadata]
name = interwebz
version = 0.0.1

[options]
packages = interwebz
install_requires =
    flask >= 2.0.2
    flask-cors >= 3.0.10
    redis >= 4.1.0

[build-system]
requires = 
  setuptools >= 40.9.0

build-backend = setuptools.build_meta

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    interwebz